--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/jonschlinkert/spawn-commands/blob/master/LICENSE-MIT"
+    "url": "https://github.com/jonschlinkert/spawn-commands/blob/master/LICENSE"
   },
+  "files": [
+    "index.js"
+  ],
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha"
+  },
+  "dependencies": {
+    "async": "^0.9.0"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*"
+    "mocha": "*"
   },
   "keywords": [
     "arg",
@@ -42,8 +47,5 @@
     "spawn",
     "win",
     "windwows"
-  ],
-  "dependencies": {
-    "async": "^0.9.0"
-  }
+  ]
 }
